--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
 						<nav>
 							<ul>
 								<li><a href="#Tomb">Tomb</a></li>
-								<li><a href="#Facility">Facility</a></li>
+								<!-- <li><a href="#Facility">Facility</a></li> -->
 								<li><a href="#Deep_Sea">Deep Sea</a></li>
 								<li><a href="#Jungle">Jungle</a></li>
 								<li><a href="#Survival">Survival</a></li>
 								<li><a href="#Resume">Resume</a></li>
+								<li><a href="#About">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -52,6 +53,8 @@
 								<h2 class="major">Tomb</h2>
 								<span class="image main"><img src="images/topview.png" alt="" /></span>
 								<p>Tomb of the Past is one of the first first-person shooter (FPS) maps I made. It was an ambitious map which takes heavy inspiration from Quake maps. The goal of the map is to find the ancient king's treasure trove. This goal will have you spelunking through this tomb filled with traps, secrets, monsters, and even researchers and soldiers that arrived before you did.</p>
+								<p>Tomb is designed to be a non-linear map where the player can progress the multiple paths in whichever order they so choose. Given that it’s a burial site for a king, there are many secrets to be found within the different chambers.</p>
+								<p>The tomb is also inhabited by researchers and their accompanying soldiers. The researchers are also looking for a way to gain passage into the King’s burial chamber, but have had no luck so far. </p>
 								<p>This maze is found later in the map when you fall down a trap door and have to make your way back to the main chamber.</p>
 								<span class="image main"><img src="images/maze.png" alt="" /></span>
 								<p>This is the main hall where you need to present to the alter the true-king's birthright in order to gain access to his final resting place.</p>
@@ -59,19 +62,20 @@
 							</article>
 
 						<!-- Facility -->
-							<article id="Facility">
+							<!--<article id="Facility">
 								<h2 class="major">Facility</h2>
 								<span class="image main"><img src="images/warehouse.png" alt="" /></span>
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 								<span class="image main"><img src="images/firstfloor.png" alt="" /></span>
-							</article>
+							</article> -->
 
 						<!-- Deep Sea -->
 							<article id="Deep_Sea">
 								<h2 class="major">Deep Sea</h2>
 								<span class="image main"><img src="images/DS_topview.png" alt="" /></span>
-								<p>Deep Sea is an underwater mining facility that also doubles as a research center for otherwordly beings found in the deepest parts of the Earth.</p>
+								<p>Deep Sea is an underwater mining facility map that also doubles as a research center for otherworldly beings found in the deepest parts of the Earth.</p>
+								<p>The goal of the map is to get to the central command of the current floor in order to gain access to the next floor. In order to do that you need to find multiple keycards guarded by top agents. Throughout the level you may even encounter monsters that have broken loose from their test tubes and cages.</p>
 							</article>
 
 						<!-- Jungle -->
@@ -79,6 +83,7 @@
 								<h2 class="major">Jungle</h2>
 								<span class="image main"><img src="images/sideview.png" alt="" /></span>
 								<p>Jungle is a small map that takes place in the heart of the rain forest. A civilization lost to time is hidden away and the adventurer has come looking for relics that promise powers beyond imagination.</p>
+								<p>Jungle is a linear experience which has you learning the basics of combat for a much longer campaign of levels. It functions as the first level and introduces multiple enemy types and various ancient relics that you find throughout the ruins and caves.</p>
 							</article>
 
 						<!-- Survival -->
@@ -94,6 +99,15 @@
 								<h2 class="major">Resume</h2>
 								<span class="image main"><img src="images/Chris Gevorkyan Resume.png" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+							</article>
+
+						<!-- About -->
+							<article id="About">
+								<h2 class="major">About Me</h2>
+								<p>I love video games. It is the medium in which I find the most enjoyment and the artform I would like to use to express myself in.</p>
+								<p>Video games have been a major part of my life since the age of eight when I received my first videogame console the Nintendo GameCube bundled with Mario Party 7. It was during high school I became interested in game development as my future career. Since then, I've been working towards strengthening my skill set and building a portfolio as a game developer.</p>
+								<p>Here's a <a href=https://chrisgevorkyan.wixsite.com/website>link</a> to my portfolio of prototypes focused on multiple facets of game design.</p>
+								<span class="image main"><img src="images/4x4.jpg" alt="" /></span>
 							</article>
 
 						<!-- Contact -->
