--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<article id="Resume">
 								<h2 class="major">Resume</h2>
 								<span class="image main"><img src="images/Chris Gevorkyan Resume.png" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<!--<p></p>-->
 							</article>
 
 						<!-- About -->
@@ -106,7 +106,8 @@
 								<h2 class="major">About Me</h2>
 								<p>I love video games. It is the medium in which I find the most enjoyment and the artform I would like to use to express myself in.</p>
 								<p>Video games have been a major part of my life since the age of eight when I received my first videogame console the Nintendo GameCube bundled with Mario Party 7. It was during high school I became interested in game development as my future career. Since then, I've been working towards strengthening my skill set and building a portfolio as a game developer.</p>
-								<p>Here's a <a href=https://chrisgevorkyan.wixsite.com/website>link</a> to my portfolio of prototypes focused on multiple facets of game design.</p>
+								<p>This portfolio is focused on level design but I also have plenty of prototypes that show off my supplementary game design skills, here's a <a href=https://chrisgevorkyan.wixsite.com/website>link</a> to that portfolio.</p>
+								<p>Below are a few of my favorite games that I've played throughout the years of being a gamer and a game designer.</p>
 								<span class="image main"><img src="images/4x4.jpg" alt="" /></span>
 							</article>
 
