--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								<li><a href="#Survival">Survival</a></li>
 								<li><a href="#Resume">Resume</a></li>
 								<li><a href="#About">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<!--<li><a href="#contact">Contact</a></li>-->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -107,12 +107,13 @@
 								<p>I love video games. It is the medium in which I find the most enjoyment and the artform I would like to use to express myself in.</p>
 								<p>Video games have been a major part of my life since the age of eight when I received my first videogame console the Nintendo GameCube bundled with Mario Party 7. It was during high school I became interested in game development as my future career. Since then, I've been working towards strengthening my skill set and building a portfolio as a game developer.</p>
 								<p>This portfolio is focused on level design but I also have plenty of prototypes that show off my supplementary game design skills, here's a <a href=https://chrisgevorkyan.wixsite.com/website>link</a> to that portfolio.</p>
+								<p>Here is my email if you need to contact me: Chrisgevorkyan@gmail.com</p>
 								<p>Below are a few of my favorite games that I've played throughout the years of being a gamer and a game designer.</p>
 								<span class="image main"><img src="images/4x4.jpg" alt="" /></span>
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
+							<!--<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -140,7 +141,7 @@
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
-							</article>
+							</article>-->
 
 						<!-- Elements -->
 							<article id="elements">
