--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
 								<span class="image main"><img src="images/maze.png" alt="" /></span>
 								<p>This is the main hall where you need to present to the alter the true-king's birthright in order to gain access to his final resting place.</p>
 								<span class="image main"><img src="images/main hall.png" alt="" /></span>
+								<span class="image main"><img src="images/cage.png" alt="" /></span>
+								<p>You need to find a hidden button in order to make these steps pop out and allow you to reach the next floor.</p>
+								<span class="image main"><img src="images/secret.png" alt="" /></span>
+								<p>Another research organization has placed a base inside the tomb and started searching for a way into the king's main chamber.</p>
+								<span class="image main"><img src="images/research.png" alt="" /></span>
+								<span class="image main"><img src="images/research2.png" alt="" /></span>
 							</article>
 
 						<!-- Facility -->
@@ -76,6 +82,13 @@
 								<span class="image main"><img src="images/DS_topview.png" alt="" /></span>
 								<p>Deep Sea is an underwater mining facility map that also doubles as a research center for otherworldly beings found in the deepest parts of the Earth.</p>
 								<p>The goal of the map is to get to the central command of the current floor in order to gain access to the next floor. In order to do that you need to find multiple keycards guarded by top agents. Throughout the level you may even encounter monsters that have broken loose from their test tubes and cages.</p>
+								<span class="image main"><img src="images/gap.png" alt="" /></span>
+								<p>The drills that mine deep into the earth are powered by nuclear power. The drills are huge so a lot of energy is needed to power them even for a short time.</p>
+								<span class="image main"><img src="images/energy.png" alt="" /></span>
+								<P>A secret terminal may give you access to a part of the level that was previously inaccessible.</P>
+								<span class="image main"><img src="images/deep_secret.png" alt="" /></span>
+								<p>The mining drill has already drilled through a part of this level.</p>
+								<span class="image main"><img src="images/mining.png" alt="" /></span>
 							</article>
 
 						<!-- Jungle -->
@@ -84,21 +97,24 @@
 								<span class="image main"><img src="images/sideview.png" alt="" /></span>
 								<p>Jungle is a small map that takes place in the heart of the rain forest. A civilization lost to time is hidden away and the adventurer has come looking for relics that promise powers beyond imagination.</p>
 								<p>Jungle is a linear experience which has you learning the basics of combat for a much longer campaign of levels. It functions as the first level and introduces multiple enemy types and various ancient relics that you find throughout the ruins and caves.</p>
+								<span class="image main"><img src="images/J_topview.png" alt="" /></span>
 							</article>
 
 						<!-- Survival -->
 							<article id="Survival">
 								<h2 class="major">Survival</h2>
-								<span class="image main"><img src="images/ZS_sideview.png" alt="" /></span>
+								<span class="image main"><img src="images/zs_profile.png" alt="" /></span>
 								<p>Survival is wave-based zombie survival map. It takes place in a small, abandoned clinic. However, underneath is a teleporter that will get you to a safer location. Problem is, it doesn’t work.</p>
-								<p>The map is quite small in order to emphasize the difficulty of surviving a zombie apocalypse. Between multiple waves of zombies will be calm moments where you can take the time to explore the map and find ways to bring the teleporter back online in order to get out. Don’t take too longer however or you may get overrun by zombies!</p>
+								<p>The map is quite small in order to emphasize the difficulty of surviving a zombie apocalypse. Between multiple waves of zombies will be calm moments where you can take the time to explore the map and find ways to bring the teleporter back online in order to get out. Don’t take too long however or you may get overrun by zombies!</p>
+								<span class="image main"><img src="images/zs_topview.png" alt="" /></span>
+								<p>In order to get the teleporter to work you need to route some electricity to it and you have to access the codes on the computer that authorize the use of the teleporter.</p>
+								<span class="image main"><img src="images/teleporter.png" alt="" /></span>
 							</article>
 
 						<!-- Resume -->
 							<article id="Resume">
 								<h2 class="major">Resume</h2>
 								<span class="image main"><img src="images/Chris Gevorkyan Resume.png" alt="" /></span>
-								<!--<p></p>-->
 							</article>
 
 						<!-- About -->
